# Pedometer

./: .gitignore  CMakeLists.txt  README.md
App/: main.c
App/BLE/Src/: ble.c  ble.h
Drivers/Gpio/Src/: gpio.c  gpio.h
Drivers/LSM6DSO/Cfg/: lsm6dso_cb.c  lsm6dso_cb.h  lsm6dso_cfg.h
Drivers/LSM6DSO/Src/: lsm6dso.c  lsm6dso.h  lsm6dso_tasks.c  lsm6dso_tasks.h  lsm6dso_types.h
Drivers/Spi/Src/: spi.c  spi.h
Embedded_software/: README.md  nrf52840dk_nrf52840.overlay  prj.conf
Embedded_software/App/: main.c
Embedded_software/App/BLE/Src/: ble.c
Embedded_software/Drivers/Gpio/Src/: gpio.c  gpio.h
Embedded_software/Drivers/LSM6DSO/Cfg/: lsm6dso_cb.c  lsm6dso_cfg.h
Embedded_software/Drivers/LSM6DSO/Src/: lsm6dso_com.h  lsm6dso_regs.h  lsm6dso_tasks.c  lsm6dso_tasks.h  lsm6dso_types.h
Embedded_software/Drivers/Spi/Cfg/: spi_cfg.h
Embedded_software/HAL/Pedometer/Src/: pedometer.c
GUI/: pedo_gui.py
HAL/BLE/Src/: ble.c  ble.h
HAL/Pedometer/Src/: pedometer.c  pedometer.h
